# cmake_lessons

./: CMakeLists.txt
data/: books.yaml
src/: Makefile  main.cpp
